--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
