--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.28",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
