backend for contact section

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tabler/icons-react": "^3.34.0",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "motion": "^12.19.2",
