--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.17.1"
   }
