Removed some credentials

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://subhransumishra:subhransu700@cluster-1.kmwx7.mongodb.net/portfolio
+MONGODB_URI=mongodb_uri_here
 FRONTEND_URL=http://localhost:5173
 NODE_ENV=development
