--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,6 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Dependencies
 node_modules
 dist
 dist-ssr
@@ -22,3 +28,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Build output
+build/
